Added base template for all web pages using Bootstrap

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,4 @@
-<html>
-    <title>
-
-    </title>
-    <body>
-        Hello World
-    </body>
-</html>
+{% extend "base.html" %}
+{% block app_content %}
+    <h1>Hello from Index</h1>
+{% endblock %}
