--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,4 @@
-{% extend "base.html" %}
+{% extends "base.html" %}
 {% block app_content %}
-    <h1>Hello from Index</h1>
+    <h1>Hello World</h1>
 {% endblock %}
