--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -2,14 +2,10 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1>Sign In</h1>
+    <h1>Register</h1>
     <div class="row">
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
         </div>
-        <div>
-            <a href="{{ url_for('auth.register') }}">Sign Up!</a>
-        </div>
     </div>
-    <br>
 {% endblock %}
