--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,6 +21,7 @@
                     <li><a href="{{ url_for('main.index') }}">Home</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
                 </ul>
             </div>
         </div>
