--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -3,13 +3,13 @@
 
 {% block app_content %}
     <h1>Sign In</h1>
-    <div class="row">
+    <div class="row" style="align-content:centre;">
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
         </div>
-        <div>
-            <a href="{{ url_for('auth.register') }}">Sign Up!</a>
-        </div>
     </div>
     <br>
+    <div>
+        <a href="{{ url_for('auth.register') }}">Sign Up!</a>
+    </div>
 {% endblock %}
