--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -6,8 +6,17 @@
             <td>
                 <h1>User: {{ user.username }}</h1>
                 {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
-                {% if user.last_seen and not current_user.is_anonymous %}
+                {% if user.last_seen and current_user.id==user.id %}
                 <p>Last seen on: {{ moment(user.last_seen).format('LLL') }}</p>
+                {% endif %}
+                <p> {{ user.followers.count() }} follower(s).</p>
+                <p>Following {{user.followed.count()}} user(s).</p>
+                {% if user == current_user %}
+                <p><a href="">Edit your profile</a></p>
+                {% elif current_user.is_following(user) %}
+                <p><a href="{{ url_for('main.unfollow', username=user.username) }}">unfollow</a></p>
+                {% else %}
+                <p><a href="{{ url_for('main.follow', username=user.username) }}">Follow</a></p>
                 {% endif %}
             </td>
         </tr>
