--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,7 @@
                     <li><a href="{{ url_for('auth.login') }}">Login</a></li>
                     {% else %}
                     <li><a href="{{ url_for('user.profile', username=current_user.username) }}">{{ current_user.username }}</a></li>
+                    <li><a href="{{ url_for('message.message') }}">Message</a></li>
                     <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
                     {% endif %}
                 </ul>
