--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -2,12 +2,12 @@
     {% for post in posts %}
         <tr>
             <td width="70px">
-                <a href="{{ url_for('user.profile', username=current_user.username) }}">
-                    <img src="{{ post.author.avatar(70) }}" />
+                <a href="{{ url_for('user.profile', username=post.author.username) }}">
+                    <img src="{{ post.author.avatar(70) }}" alt='{{ post.author.username }}'/>
                 </a>
             </td>
             <td>
-                <a href="{{ url_for('user.profile', username=current_user.username) }}">
+                <a href="{{ url_for('user.profile', username=post.author.username) }}">
                     {{ post.author.username }}
                 </a>
                 said {{ moment(post.timestamp).fromNow() }} ago
