--- a/app/templates/message/msg_dashboard.html
+++ b/app/templates/message/msg_dashboard.html
@@ -1,8 +1,22 @@
 {% extends 'base.html' %}
 
 {% block app_content %}
-    <div>
-        <h2> Unread Message </h2>
-    </div>
-    {% include 'user/_userList.html' %}
+    <table class="table table-hover">
+        {% for u in unread_users %}
+            <tr>
+                <td width="70px" style="magin-right:4%;">
+                <a href="{{ url_for('message.chat', With=u.username) }}">    
+                    <img src="{{ u.avatar(70) }}" />
+                </a>
+                </td>
+                <td>
+                <a href="{{ url_for('message.chat', With=u.username) }}" 
+                   style="text-decoration: none;color: black;">
+                    <strong>{{ u.username }}</strong>
+                    <br>
+                </a>
+                </td>
+            </tr>
+        {% endfor %}
+    </table>
 {% endblock %}
