Perfected backend for chat(optimized query)

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -55,11 +55,12 @@
         {# application content needs to be provided in the app_content block #}
         {% block app_content %}{% endblock %}
     </div>
+    <div id='chat-sidebar'></div>
     <div class="chat-sidebar">
         <div class="sidebar-name">
             <a href="javascript:register_popup('narayan-prusty', 'Narayan Prusty');">
                 <img width="30" height="30" src="" alt='Working'/>
-                <span>Narayan Prusty</span>
+                <span>NP</span>
             </a>
         </div>
     </div>
