--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8"/>
     {% block styles %}
         {{super()}}
+        <link rel="stylesheet" 
+            href="{{ url_for('static', filename='chatPageCSS.css') }}">
+        <!--
         <link rel="stylesheet" href="{{ url_for('static', filename='cssChat.css') }}">
+        -->
     {% endblock %}
 {% endblock %}
 
@@ -32,7 +36,15 @@
                     {% if current_user.is_anonymous %}
                     <li><a href="{{ url_for('auth.login') }}">Login</a></li>
                     {% else %}
-                    <li><a href="{{ url_for('user.profile', username=current_user.username) }}">{{ current_user.username }}</a></li>
+                    <li>
+                        <a href="{{ url_for('user.profile', username=current_user.username) }}">
+                        <img src="{{ current_user.avatar(20) }}" 
+                            alt="{{ current_user.username }}"
+                            style="max-width:20px; width:100%;
+                                    border-radius:50%;">
+                        {{ current_user.username }}
+                        </a>
+                    </li>
                     <li><a href="{{ url_for('message.dashboard') }}">Message</a></li>
                     <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
                     {% endif %}
@@ -44,9 +56,9 @@
 
 {% block content %}
     <div class="container">
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for message in messages %}
+        {% with flash_messages = get_flashed_messages() %}
+        {% if flash_messages %}
+            {% for message in flash_messages %}
             <div class="alert alert-info" role="alert">{{ message }}</div>
             {% endfor %}
         {% endif %}
@@ -56,15 +68,18 @@
         {% block app_content %}{% endblock %}
     </div>
 
-    <div id='chatSidebar' class='chat-sidebar'></div>
+    <!--<div id='chatSidebar' class='chat-sidebar'></div>-->
 
 {% endblock %}
 
 {% block scripts %}
     {{super()}}
-    <script src="{{ url_for('static', filename='jsChat.js') }}"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type=text/javascript>
+    <!--
+    <script src="{{ url_for('static', filename='jsChat.js') }}"></script>
+    -->
+    <!--
+        <script type=text/javascript>
         $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
         (function(){
             $.getJSON(
@@ -87,5 +102,6 @@
             setTimeout(arguments.callee, 1500);
         })();
     </script>
+    -->
     {{ moment.include_moment() }}
 {% endblock %}
