--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -8,7 +8,7 @@
                 {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
                 {% if user.last_seen and current_user.id==user.id %}
                 <p>Last seen on: {{ moment(user.last_seen).format('LLL') }}</p>
-                {% endif %}                
+                {% endif %}          
                 <a href="{{ url_for('user.followers', username=user.username) }}" class='badge'>
                     <span id="follower_count"></span> follower(s)
                 </a>
@@ -21,7 +21,12 @@
                     {% elif current_user.is_following(user) %}
                     <p><a href="{{ url_for('main.unfollow', username=user.username) }}">Unfollow</a></p>
                     {% else %}
-                    <p><a href="{{ url_for('main.follow', username=user.username) }}">Follow</a></p>
+                    <br><br>
+                    <p>
+                    <a href="{{ url_for('message.chat', With=user.username) }}">Message</a>
+                    <br>
+                    <a href="{{ url_for('main.follow', username=user.username) }}">Follow</a>
+                    </p>
                     {% endif %}
                 {% endif %}
             </td>
@@ -42,6 +47,7 @@
             </li>
         </ul>
     </nav>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type=text/javascript>
         $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
         (function(){
