--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -10,7 +10,7 @@
                 <a href="{{ url_for('user.profile', username=post.author.username) }}">
                     {{ post.author.username }}
                 </a>
-                said {{ moment(post.timestamp).fromNow() }} ago
+                said {{ moment(post.timestamp).fromNow() }}
                 <br>
                 {{ post.body }}
             </td>
