--- a/app/templates/message/chat.html
+++ b/app/templates/message/chat.html
@@ -28,7 +28,7 @@
         <div id='new-message'></div>
     </div>
     <br>
-    <div style='bottom:0'>
+    <div style='bottom:0' id='message-input'>
         <form method="post">
             <input type="text" class="form-control"
                 name="push_message_box" id="push_message_box" 
