--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -7,11 +7,20 @@
                 </a>
             </td>
             <td>
-                <a href="{{ url_for('user.profile', username=post.author.username) }}">
-                    {{ post.author.username }}
-                </a>
-                said {{ moment(post.timestamp).fromNow() }}
-                <br>
+                
+                
+
+                {% set user_link %}
+                    <span class="user_popup">
+                        <a href="{{ url_for('user.profile', username=post.author.username) }}">
+                            {{ post.author.username }}
+                        </a>
+                    </span>
+                {% endset %}
+                {{ user_link }} said {{ moment(post.timestamp).fromNow() }}
+                <br><br>
+
+
                 {{ post.body }}
             </td>
         </tr>
