--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -10,10 +10,10 @@
                 <p>Last seen on: {{ moment(user.last_seen).format('LLL') }}</p>
                 {% endif %}          
                 <a href="{{ url_for('user.followers', username=user.username) }}" class='badge'>
-                    <span id="follower_count"></span> follower(s)
+                    <span id="follower-count"></span> follower(s)
                 </a>
                 <a href="{{ url_for('user.followed', username=user.username) }}" class='badge'>
-                    <span id="followed_count"></span> following
+                    <span id="followed-count"></span> following
                 </a>
                 <br><br>
                 {% if not current_user.is_anonymous %}
