--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -12,4 +12,9 @@
     <div>
         <a href="{{ url_for('auth.register') }}">Sign Up!</a>
     </div>
+    <br>
+    <div>
+        Forgot Your Password?
+        <a href="{{ url_for('auth.reset_password_request') }}">Click to Reset It</a>
+    </div>
 {% endblock %}
