--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,14 +6,11 @@
         {{super()}}
         <link rel="stylesheet" 
             href="{{ url_for('static', filename='chatPageCSS.css') }}">
-        <!--
-        <link rel="stylesheet" href="{{ url_for('static', filename='cssChat.css') }}">
-        -->
     {% endblock %}
 {% endblock %}
 
 {% block title %}
-    {% if title %}{{ title }}{% endif %}
+    {% if title %}{{ title }}{% else %}Umhera{% endif %}
 {% endblock %}
 
 {% block navbar %}
@@ -32,6 +29,15 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('main.index') }}">Home</a></li>
                 </ul>
+                {% if g.search_form %}
+                <form class="navbar-form navbar-left" method="get"
+                        action="{{ url_for('main.search') }}">
+                    <div class="form-group">
+                        {{ g.search_form.q(size=20, class='form-control',
+                            placeholder=g.search_form.q.label.text) }}
+                    </div>
+                </form>
+                {% endif %}
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_anonymous %}
                     <li><a href="{{ url_for('auth.login') }}">Login</a></li>
