Added utility to confirm email on registration

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -9,9 +9,7 @@
         </div>
     </div>
     <br>
-    <div>
-        <a href="{{ url_for('auth.register') }}">Sign Up!</a>
-    </div>
+    <div><a href="{{ url_for('auth.register') }}">Sign Up!</a></div>
     <br>
     <div>
         Forgot Your Password?
