--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" 
             href="{{ url_for('static', filename='chatPageCSS.css') }}">
     {% endblock %}
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 {% endblock %}
 
 {% block title %}
